     The ignores, add, timequake, and timeoffset commands set Q bits
     Source types of stream dumps can be deduced from ignore file names.
     Fossil import/export from checkouts is supported; --format=fossil is gone.
     Ignore pattern translation is available with "ignores --translate".
     Documentation on working with hg has been much expanded.

4.38: 2023-06-14::
     Experimental Perforce (p4) mirroring support in repotool.
     Added timequake --tick option.

4.37: 2023-05-28::
     Add experimental support for brz/Breezy.
     Support reading SCCS repository directories directly.
     Add repocutter hash command for working with a content-addressible annex.

4.36: 2023-04-27::
     Documentation refresh.
     Minor cleanups for code validation.

4.35: 2023-03-21::
     Document an important gotcha about working with CVS.
     Clean up some annoyances in the build and test machinery.

4.34: 2023-01-24::
     Change repocutter -f (basename) option to -n.
     Default filecopy to matching a regexp; -f now undoes this.
     Add repocutter count and debug commands.
     Repocutter patches missing copyfrom source revisions.
     Added repocutter swapcheck command for sanity checking.

4.33: 2022-12-21::
     Some potentially unsafe shellouts have been fixed.
     Format --fossil is no longer broken.
     Fix segfault when listing descendants of orphaned commit.
     Ensure that repocutter is quieted when output is not stdout.

4.32: 2022-04-28::
     "lint" command no longer accidentally clears most Q bits.
     repocutter renumber no longer mangles mergeinfo properties.
     Fixed mergeinfo handling in repoocutter commands that remove revisions.
     Interactive lint listing is interruptible.
     Significant bugfixes and major code simplification in repocutter swapsvn.
     repocutter push is restricted by pathmatch rather than range.
     repocutter push can be pattern-restricted.