@@ -850,11 +850,16 @@ comments that don't decode to UTF-8 in both the commit comment and
 attribution parts. You can use `=I list inspect` to view them.
 
 It's up to you to figure out what the encoding is and apply the
-'```<<transcode_cmd>>```' command to re-encode in UTF-8.
+'```<<transcode_cmd>>```' command to re-encode in UTF-8. You
+can test the results of applying different encodings 
 
-Anm example command:
+Example commands:
 
 --------
+# Try out latin1 decoding to see if it throws errors
+=I msgout --decode=latin1
+
+# Apply latin-1 decoding to UTF-9
 =I transcode latin1
 --------
 
@@ -4063,7 +4068,7 @@ history
 log [[+-]LOG-CLASS]...
 {SELECTION} merge
 [SELECTION] msgin [--create] [<INFILE]
-[SELECTION] msgout [--filter=PATTERN] [--blobs]
+[SELECTION] msgout  [--decode=codec] [--filter=PATTERN] [--blobs]
 prefer [VCS-NAME]
 SELECTION prepend [--rstrip] {TEXT}
 preserve [PATH...]
@@ -4102,7 +4107,7 @@ clear {logfile|readlimit}
 [SELECTION] create {repo NAME|blob NAME [<INFILE]|tag NAME|reset NAME}
 {SELECTION} delete {commit | {path|tag|branch|reset} [--quiet|--not|--notagify] PATTERN]}
 [SELECTION] filter {dedos|shell|regexp|replace} [TEXT-OR-REGEXP]
-[SELECTION] list [commits|tags|stamps|inspect|index|manifest|paths|names] [PATTERN] [>OUTFILE]
+[SELECTION] list [--decode=codec] [commits|tags|stamps|inspect|index|manifest|paths|names] [PATTERN] [>OUTFILE]
 profile {live|start|save|bench} [PORT | SUBJECT [FILENAME]]
 set flag [canonicalize|crlf|compress|echo|experimental|interactive|progress|serial|faketime|quiet]+
 set {logfile|readlimit} VALUE
@@ -4113,7 +4118,7 @@ VSO:
 
 ----
 [SELECTION] move {tag|reset} [--not] PATTERN [NEW-NAME]
-[SELECTION] remove {deletes | [DMRCN] PATH | INDEX ] [to TARGET]
+[SELECTION] remove {INDEX | ["D"|"M"|"R"|"C"|"N"] [PATH]} [to TARGET]
 [SELECTION] rename {repo | path PATTERN [--force] | {path|branch|tag|reset} [--not] PATTERN}} NEW-NAME
 ----
 
